<resources>
    <string name="app_name">Ejercicio2</string>
    <string name="introduzca_un_n_mero">Introduzca un número:</string>
    <string name="introduzca_otro_n_mero">Introduzca otro número:</string>
    <string name="sumar">Sum</string>
    <string name="restar">Res</string>
    <string name="multiplicar">Mul</string>
    <string name="dividir">Div</string>
    <string name="limpiar">Limpiar</string>
    <string name="salir">Salir</string>
</resources>